# stp-blueprint

./: OrPaynter_AI_Platform_Development_Plan.docx  OrPaynter_AI_Platform_Development_Plan.md  README.md  SECURITY.md  deploy_revenue_beta.py  deploy_url.txt  main.py  sales_materials.md  setup_platform.py  todo.md
Analysis/: AndroidManifest.xml  App.js  AppNavigator.js  Assessment.js  AssessmentDetailScreen.js  AssessmentList.tsx  AuthCard.tsx  AuthContext.js  CameraScreen.js  Claim.js  ClaimDetailScreen.js  DamageAssessmentViewer.tsx  DashboardOverview.tsx  DashboardScreen.js  Footer.tsx  Invoice.js  LoginForm.tsx  LoginScreen.js  MainLayout.tsx  MobileMenu.tsx  Navbar.tsx  OfflineContext.js  Order.js  Payment.js  PlayBilling.json  Product.js  Project.js  ProjectCard.tsx  ProjectsList.tsx  RegisterForm.tsx  RegisterScreen.js  ResponsiveContainer.tsx  ResponsiveGrid.tsx  Service.js  Sidebar.tsx  StatCard.tsx  StoreKit.json  User.js  api.js  api_gateway.yml  (+50 more)
Videos/: OrPaynter.prproj
docs/: research_plan_OrPaynter_AI_Platform.md  research_plan_orpaynter_launch.md  technical_roadmap.md
implementation/: ai_service_complete.py  beta_onboarding_system.md  docker_deployment.yml  frontend_ai_integration.tsx  github_actions_cicd.yml  legal_documentation.md  seo_marketing_strategy.md
launch_sprint/: SPRINT_COMPLETE_SUMMARY.md  (+41 more)
orpaynter-mcp-server/: README.docx  README.md  mcp-server.json  pyproject.toml  run.sh  server.py
orpaynter-mcp-server/examples/: usage_examples.py
orpaynter-mcp-server/src/orpaynter_mcp/: server.py
orpaynter-mcp-server/tests/: test_server.py
(+96 files in other folders)
